fixed alignment issues on about section.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2227,6 +2227,10 @@
     		column-count: 2;
     		}
 
+    		.about {
+    			text-align: center;
+    		}
+
 
 /* Wide */
 
